--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mongodb": "^5.9.0",
     "mongoose": "^7.5.1",
     "nestjs-telegraf": "^2.7.0",
+    "redis": "^4.6.10",
+    "redis-connection-pool": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "telegraf": "^4.13.1",
