--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
-    "@nestjs/typeorm": "^10.0.0",
     "@telegraf/session": "^2.0.0-beta.6",
     "axios": "^1.6.4",
     "cheerio": "^1.0.0-rc.12",
@@ -38,11 +37,9 @@
     "mongoose": "^7.5.1",
     "nestjs-telegraf": "^2.7.0",
     "redis": "^4.6.10",
-    "redis-connection-pool": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.13.1",
-    "telegraf-session-mongodb": "^2.0.2"
+    "telegraf": "^4.13.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
