--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^4.0.0",
     "@telegraf/session": "^2.0.0-beta.6",
     "axios": "^1.6.4",
+    "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "mongodb": "^5.9.0",
